// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadList matches the last snapshot 1`] = `
<div
  data-styleName="thread-list"
>
  <div
    data-styleName="header"
  >
    <Link
      replace={false}
      to="/t/new"
    >
      <Button
        data-styleName="new-message"
        label="New Message"
      />
    </Link>
    <div
      data-styleName="header-text"
    >
      Messages
    </div>
  </div>
  <div
    data-styleName="search"
  >
    <TextInput
      onChange={[Function]}
      placeholder="Search for people..."
    />
  </div>
  <ul
    data-styleName="list"
    id="thread-list-list"
  >
    <div
      data-styleName="no-conversations"
    >
      You have no active conversations
    </div>
  </ul>
  <ScrollListener
    elementId="thread-list-list"
  />
</div>
`;

exports[`ThreadListItem matches the last snapshot 1`] = `
<li
  data-styleName="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
          "la.png",
        ]
      }
    />
    <div
      data-styleName="li-center-content"
    >
      <ThreadNames
        names={
          Array [
            "Jo",
            "La",
          ]
        }
      />
      <div
        data-styleName="thread-message-text"
      />
    </div>
    <div
      data-styleName="li-right-content"
    >
      <div
        data-styleName="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with 2 participants 1`] = `
<li
  data-styleName="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
        ]
      }
    />
    <div
      data-styleName="li-center-content"
    >
      <ThreadNames
        names={
          Array [
            "Jo",
          ]
        }
      />
      <div
        data-styleName="thread-message-text"
      />
    </div>
    <div
      data-styleName="li-right-content"
    >
      <div
        data-styleName="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with just you 1`] = `
<li
  data-styleName="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "ra.png",
        ]
      }
    />
    <div
      data-styleName="li-center-content"
    >
      <ThreadNames
        names={
          Array [
            "You",
          ]
        }
      />
      <div
        data-styleName="thread-message-text"
      />
    </div>
    <div
      data-styleName="li-right-content"
    >
      <div
        data-styleName="message-time"
      />
    </div>
  </Link>
</li>
`;
